# Deploy-YoloV5-RestAPI

./: .gitignore  LICENSE  README.md  requirements.txt
Qt-client/object-detection-gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
dockerfiles/: restapi-python.Dockerfile
onnx-cpp/: CMakeLists.txt
onnx-cpp/include/: detector.hpp  onnxHandler.hpp  utils.hpp
onnx-cpp/src/: CMakeLists.txt  client  detector.cpp  main.cpp  onnxHandler.cpp  server  utils.cpp
python/: request.py  restapi.py
python-torch-tcp/: receiver.py  sender.py
scripts/: export2onnx.py  restapi-client.py
